syntax="proto3";
package Auth;

service Auth {
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc Login (LoginRequest) returns (LoginResponse) {}
    rpc UpdateCredentials (UpdateCredentialsRequest) returns (UpdateCredentialsResponse){}
    rpc ActivateAccount(ActivateAccountRequest) returns (ActivateAccountResponse){}
    rpc Generate2FA(Generate2FARequest) returns (Generate2FAResponse){}
    rpc Setup2FA(Setup2FARequest) returns (Setup2FAResponse){}
    rpc Disable2FA(Disable2FARequest) returns (Disable2FAResponse){}
    rpc Verify2FA(Verify2FARequest) returns (Verify2FAResponse){}
} 

message RegisterRequest {
    string email = 1;
    string password = 2;
}

message RegisterResponse {
    bool ok = 1;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

message UpdateCredentialsRequest {
    string email = 1;
    string password = 2;
}

message UpdateCredentialsResponse {
    bool ok = 1;
}

message ActivateAccountRequest {
    string email = 1;
}

message ActivateAccountResponse {
    bool ok = 1;
}

message Generate2FARequest {
    string email = 1;
}

message Generate2FAResponse {
    bytes qr_image = 1;
}

message Setup2FARequest {
    string email = 1;
    string code = 2;
}

message Setup2FAResponse {
    bool ok = 1;
}

message Disable2FARequest {
    string email = 1;
    string code = 2;
}

message Disable2FAResponse {
    bool ok = 1;
}

message Verify2FARequest {
    string email = 1;
    string code = 2;
}

message Verify2FAResponse {
    bool ok = 1;
}